# NextGenStore

./: .env.example  README.md  manage.py  pyproject.toml
blog/: forms.py  models.py  signals.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_content.py  0003_alter_article_options_alter_article_slug.py  0004_alter_article_slug.py  0005_alter_article_title.py  0006_alter_article_slug.py  0007_alter_article_slug_alter_article_title.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
blog/templatetags/: article_filters.py
catalog/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: load_fixtures.py
catalog/migrations/: 0001_initial.py  0002_contactinfo.py  0002_product_manufactured_at.py  0003_version.py  0004_product_owner.py  0005_product_is_published.py  0006_alter_product_options_alter_product_is_published.py  0007_alter_product_is_published.py
catalog/templates/: base.html
catalog/templates/catalog/: contact.html  home.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  (+1 more)
catalog/templatetags/: moderator_only.py  product_filters.py
fixtures/: catalog_data.json  load_data.json
nextgenstore/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: blog.css  pricing.css
users/: forms.py  models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_user_token.py  0004_alter_user_phone.py
users/templates/: login.html
(+9 files in other folders)
